# Loan_Risk_Prediction

./: Loan_Default_Risk_Prediction.ipynb  README.md  app_config.json  pyproject.toml  requirements.txt
app/: main.py
models/: best_gb_model.pkl  deployment_bundle.pkl
