[project]
name = "loan-risk-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Sid"}
]
readme = "README.md"
requires-python = "^3.11.9"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlxtend (>=0.24.0,<0.25.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "cloudpickle (>=3.1.2,<4.0.0)",
    "streamlit (>=1.52.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
